[tool.poetry]
name = "maksupalvelut-api"
version = "0.1.0"
description = ""
authors = ["Topias Ukkonen <ukkonentopias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
requests = "^2.32.3"

[tool.poetry.scripts]
maksupalvelut-api = "main:app.run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
